# ethereum-light-client-rs

./: Makefile  README.md
.github/workflows/: no-std.yaml  test.yml
crates/consensus/: Cargo.toml
crates/consensus/data/: mainnet_block_10265184.json  mainnet_header_10265184.json
crates/consensus/src/: beacon.rs  bellatrix.rs  bls.rs  capella.rs  compute.rs  context.rs  deneb.rs  errors.rs  execution.rs  fork.rs  lib.rs  merkle.rs  preset.rs  sync_protocol.rs  types.rs
crates/consensus/src/config/: goerli.rs  mainnet.rs  minimal.rs  sepolia.rs
crates/consensus/src/fork/: altair.rs  bellatrix.rs  capella.rs  deneb.rs  electra.rs
crates/consensus/src/preset/: mainnet.rs  minimal.rs
crates/light-client-cli/: Cargo.toml
crates/light-client-cli/src/: chain.rs  cli.rs  client.rs  commands.rs  context.rs  errors.rs  lib.rs  preset.rs  state.rs
crates/light-client-cli/src/commands/: block.rs  header.rs  info.rs  init.rs  update.rs
crates/light-client-verifier/: Cargo.toml
crates/light-client-verifier/data/: finality_update_period_6.json  finality_update_period_7.json  finality_update_period_8.json  finality_update_period_9.json  initial_state.json  light_client_update_period_5.json  light_client_update_period_6.json  light_client_update_period_7.json  light_client_update_period_8.json  light_client_update_period_9.json
crates/light-client-verifier/src/: consensus.rs  context.rs  errors.rs  execution.rs  lib.rs  misbehaviour.rs  mock.rs  state.rs  updates.rs
crates/light-client-verifier/src/updates/: bellatrix.rs  capella.rs  deneb.rs
crates/lodestar-rpc/: Cargo.toml
crates/lodestar-rpc/src/: client.rs  types.rs
