[package]
name = "ethereum-light-client-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
displaydoc = { version = "0.2", default-features = false }

ethereum-consensus = { path = "../consensus", default-features = false }
trie-db = { version= "0.24.0", default-features = false }
patricia-merkle-trie = { git = "https://github.com/bluele/patricia-merkle-trie", branch = "no-std-keccak-hasher", default-features = false, features = ["keccak"] }
primitive-types = { version = "0.12.1", default-features = false }
rlp = { version = "0.5.2", default-features = false }

[dev-dependencies]
serde_json = "1.0.91"
hex-literal = "0.3.4"
rand = { version = "0.8.5", features = ["std", "std_rng"] }
ssz-rs = { git = "https://github.com/bluele/ssz_rs", branch = "serde-no-std", default-features = false, features = ["serde"] }
milagro_bls = { git = "https://github.com/datachainlab/milagro_bls", rev = "bc2b5b5e8d48b7e2e1bfaa56dc2d93e13cb32095", default-features = false }

[features]
default = ["std"]
std = [
    "trie-db/std",
    "patricia-merkle-trie/std"
]
mock = []
