[package]
name = "lodestar-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_derive = { version = "1.0.104", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = "1.0.91"
log = { version = "0.4.17", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc", "serde"] }
displaydoc = { version = "0.2", default-features = false }
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.24.1", default-features = false, features = ["rt-multi-thread", "macros"] }

ethereum-consensus =  { path = "../consensus" }
ethereum-light-client-verifier = { path = "../light-client-verifier" }

[features]
default = []
