[package]
name = "lodestar-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = "1.0.91"
log = { version = "0.4.17", default-features = false }
displaydoc = { version = "0.2", default-features = false }
reqwest = { version = "0.11.13", features = ["json"] }

ethereum-consensus =  { path = "../consensus" }

[features]
default = []
